--- a/accueil.html
+++ b/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - Amine_Lux</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -31,6 +31,6 @@
         <p>&copy; 2024 Amine_Lux</p>
     </footer>
     <button id="back-to-top">↑</button>
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
