--- a/accueil.html
+++ b/accueil.html
@@ -21,7 +21,7 @@
         <section>
             <div class="intro">
                 <h2>Accueil</h2>
-                <img src="images/intro-image.jpg" alt="Introduction">
+                <img src="intro-image.jpg" alt="Introduction">
                 <p>Bienvenue sur notre site web. Nous sommes ravis de vous avoir ici. Explorez nos services et apprenez-en plus sur ce que nous avons à offrir.</p>
                 <center><a href="index.html" class="cta-button">En savoir plus</a></center>
             </div>
